# kal

./: Cargo.toml  README.md
kal/: Cargo.toml
kal-derive/: Cargo.toml
kal-derive/src/: error.rs  lib.rs
kal-derive/src/codegen/: command_option_codegen.rs  mod.rs
kal-derive/src/common/: doc_string.rs  mod.rs  renamer.rs
kal-derive/src/common/codegen/: command_option_codegen.rs
kal-derive/src/common/config/: argument_config.rs  command_config.rs  mod.rs
kal-derive/src/config/: command_config.rs
kal-derive/src/derive_command/: mod.rs
kal-derive/src/derive_command/config/: command_config.rs
kal-derive/src/derive_transform_hint/: mod.rs
kal-derive/src/derive_transform_hint_provider/: mod.rs
kal-derive/tests/: enum_derive.rs  parse.rs  struct_derive.rs
kal/src/: command.rs  command_fragment.rs  command_group.rs  command_spec.rs  error.rs  lib.rs
kal/src/command_fragment/: command_argument.rs  mod.rs  wrapper.rs
kal/src/command_fragment/try_from_argument_value/: mod.rs
kal/src/command_fragment/try_from_argument_value/impls/: f64.rs  i64.rs  mod.rs  option.rs  string.rs  vec.rs
kal/src/lex/: label_strip_util.rs  lexer.rs  mod.rs  token.rs  transform_hint.rs  transformer.rs
testsuite/: Cargo.toml
testsuite/tests/: default_argument.rs  enum_derive.rs  lex.rs  multiple.rs  parse.rs  parse_derive.rs  struct_derive.rs  transform.rs  transform_derive.rs
