[package]
name = "kal-derive"
version = "0.2.2"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/kal"
license = "MIT"
description = "#[derive(Command)] macro for kal"
readme = "../README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.1"
syn = "1.0.99"
quote = "1.0.21"
