[package]
name = "kal"
version = "0.1.1"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/kal"
license = "MIT"
description = "Command Abstraction Layer"
readme = "../README.md"

[dependencies]
kal-derive = { path = "../kal-derive", version = "0.1", optional = true }

[features]
derive = ["kal-derive"]
default = ["derive"]
