[package]
name = "kal"
version = "0.4.2"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/kal"
license = "MIT"
description = "Command Abstraction Layer"
readme = "../README.md"

[dependencies]
kal-derive = { path = "../kal-derive", version = "0.4", optional = true }

[features]
default = ["derive"]

derive = ["dep:kal-derive"]
lex = ["kal-derive?/lex"]

[package.metadata.docs.rs]
# document all features
all-features = true
